--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ function drawText() {
 	ctx.textAlign = "center";
 	ctx.fillText("生日快乐", W/2, H/2);
 	ctx.fillText("黄敏", W/2, H/2-H/5);
-  ctx.fillText("心想事成，美丽动人^_^", W/2, H/2+H/5);
+	ctx.fillText("黄敏", W/2, H/2+H/5);
+ // ctx.fillText("心想事成，美丽动人^_^", W/2, H/2+H/5);
 }
 // Clear the canvas
 function clear() {
