--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function drawText() {
 	ctx.textAlign = "center";
 	ctx.fillText("生日快乐", W/2, H/2);
 	ctx.fillText("黄敏", W/2, H/2-H/5);
-	ctx.fillText("祝你健康美丽，开心快乐^_^", W/2, H/2+H/5-20);
+	ctx.fillText("健康美丽^_^开心快乐", W/2, H/2+H/5-50);
 }
 // Clear the canvas
 function clear() {
