--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ function drawText() {
 	ctx.fillStyle = "#8800ff";
 	ctx.font = "100px 'Arial', sans-serif";
 	ctx.textAlign = "center";
-	ctx.fillText("生日快乐", W/2, H/2);
-	ctx.fillText("黄敏", W/2, H/2-H/5-50);
+	ctx.fillText("生日快乐", W/2, H/2-25);
+	ctx.fillText("黄敏", W/2, H/2-H/5);
 	ctx.fillText("健康美丽^_^开心快乐", W/2, H/2+H/5-50);
 }
 // Clear the canvas
